--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky",
-    "format": "next lint --fix && prettier '**/*.{json,yaml,(j|t)s?(x)}' --write --ignore-path .gitignore"
+    "lint": "next lint"
   },
   "dependencies": {
     "react": "^18",
